--- a/Quest/Resources/plists/Introduction.plist
+++ b/Quest/Resources/plists/Introduction.plist
@@ -13,6 +13,12 @@
 			<key>text</key>
 			<string>step 2</string>
 			<key>image</key>
+			<string>SampleImage1</string>
+		</dict>
+		<dict>
+			<key>text</key>
+			<string>step 3</string>
+			<key>image</key>
 			<string>SampleImage2</string>
 		</dict>
 	</array>
